# steam-friend-annoyer

./: .env.example  .gitignore  BUILD_GUIDE.md  COMPLETION_CHECKLIST.md  DELIVERY.md  IMPLEMENTATION.md  INDEX.md  QUICK_START.md  README.md  dev.py  main.py  pyproject.toml
.github/workflows/: build-windows.yml
src/: app_controller.py
src/persistence/: storage.py
src/steam_service/: __init__.py  client.py
src/system_integration/: __init__.py  auto_update.py  notifications.py  tray.py
src/ui/: main_window.py  widgets.py
src/utils/: config.py  encryption.py  validators.py
